# sync-cloud

./: .gitignore  README.md
backend/: CMakeLists.txt  SQL_BD.sql  config.json  main.cc
backend/controllers/: users_User.cc  users_User.h
backend/models/: Files.cc  Files.h  Users.cc  Users.h  model.json
backend/test/: CMakeLists.txt
backend_2.0/: CMakeLists.txt  README.md  run.sh
backend_2.0/resources/: config.json
backend_2.0/sql/: init_db.sql
backend_2.0/src/: App.cpp  AppComponent.hpp  DatabaseComponent.hpp  ErrorHandler.cpp  ErrorHandler.hpp  ServiceComponent.hpp  SwaggerComponent.hpp
backend_2.0/src/controller/: AuthBearer.hpp  FileController.hpp  UserController.hpp
backend_2.0/src/db/: DbConnection.hpp
backend_2.0/src/dto/: ConfigDto.hpp  StatusDto.hpp  UserDto.hpp
backend_2.0/src/service/: UserService.cpp  UserService.hpp
backend_2.0/utility/: install.sh
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.tsx  ContextProvider.tsx  PrivateRouter.tsx  i18n.ts  i18next.d.ts  index.css  index.tsx  types.ts
frontend/src/api/: api.ts
frontend/src/common/components/: index.ts
frontend/src/common/constants/: index.ts  language.ts  roles.ts  routes.ts
frontend/src/common/styles/: colors.css  styles.css
frontend/src/models/: File.ts  User.ts  index.ts  other.ts
frontend/src/pages/: index.ts
frontend/src/pages/Auth/MainAuth/: MainAuth.module.css  (+1 more)
frontend/src/pages/Files/: Files.module.css  Files.tsx
frontend/src/pages/Logout/: Logout.tsx
frontend/src/pages/Main/: Main.module.css  Main.tsx  MainContextProvider.tsx
frontend/src/pages/NotFound/: NotFound.module.css  NotFound.tsx
frontend/src/pages/Trash/: Trash.tsx
frontend/src/services/: auth.ts  files.ts  index.ts
frontend/src/translations/: en.json  ru.json
frontend/src/utils/: fn.ts  format.ts  hooks.ts  html.ts  index.ts  query.ts  storage.ts
(+59 files in other folders)
